# ray-tracer

./: CMakeLists.txt
include/Core/: Axis.h  Collision.h  Colour.h  Cuboid.h  Line.h  Material.h  Plane.h  Point.h  Ray.h  Triangle.h
include/Model/: CpuExecutor.h  GpuExecutor.h  Matrix.h  Ray.h  TriangleBasedPyramid.h  World.h
include/View/: Canvas.h  Paintbrush.h
src/: main.cpp
src/Core/: Triangle.cpp
src/Gpu/: GpuExecutor.mm  multiply.metal  raytracer.metal
src/Model/: CpuExecutor.cpp  TriangleBasedPyramid.cpp  World.cpp
src/View/: Canvas.cpp  Paintbrush.cpp
